refactor(redis): clean up SentinelCluster and DefaultStandaloneContainerInstanceFactory
SentinelCluster:
- getControl() DCL replaced with AtomicReference.updateAndGet() — idiomatic JDK 9+, no synchronized block
- restart(role) called getControl() twice — extracted local variable, single facade lookup
- getMaster() called getMasterHost() + getMasterPort() separately — extracted currentMaster() helper, single facade lookup
- getAllContainers() built mutable ArrayList then List.copyOf — replaced with Stream.concat().toList()
- ArrayList import removed (no longer needed)
- Stream import added
- Container accessor Javadoc improved: one-liner @return → full descriptive sentences

DefaultStandaloneContainerInstanceFactory:
- Arrays.asList() → List.of() (JDK 25 varargs, immutable)
- Arrays import removed
- catch (Exception) → catch (RuntimeException) — no longer swallows Errors
- Package-private visibility preserved (deliberate: same-package unit tests access internal steps)
- Javadoc on all package-private methods: @param, @return added
- Explicit note on package-private methods explaining the test-access rationale